# advent-of-code

./: .gitignore  Cargo.toml  LICENSE  README.md  get_input.sh  justfile
2015/: Cargo.toml
2016/: Cargo.toml
2022/: Cargo.toml
2023/: Cargo.toml
2024/: Cargo.toml
aoc24/: Cargo.toml
aoc24/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
aoc25/: Cargo.toml
aoc25/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs  parser.rs
utils/: Cargo.toml
utils/src/: grid.rs  input_reader.rs  lib.rs  solution.rs
