[workspace]
resolver = "3"
members = [
    "aoc24",
    "aoc25",
    "cli",
    "utils",
]

[workspace.package]
version = "0.1.0"
authors = ["Gustavo Batistela @gustavobat"]
edition = "2024"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.100"
aoc24 = { path = "aoc24" }
aoc25 = { path = "aoc25" }
clap = { version = "4.5.49" }
colored = "3.0.0"
dotenvy = "0.15.7"
hashbrown = "0.16.1"
human-repr = "1.1.0"
inventory = "0.3.21"
itertools = "0.14.0"
rayon = "1.11.0"
regex = { version = "1.12.2" }
reqwest = { version = "0.12.24", default-features = false }
spinners = "4.1.1"
utils = { path = "utils" }