[package]
name = "aoc24"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "aoc24"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
hashbrown = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
utils = { workspace = true }